--- a/god.html
+++ b/god.html
@@ -12,14 +12,19 @@
 	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"WIDTH=130 HEIGHT=200></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
 <p><br>
 一、葛神之纯真年代（1969年1月–1990年7月）</p>
-<p>&nbsp;&nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
+<p>&nbsp; &nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
 
  <A href="dxly/cz5.htm" target="_blank">第五章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz7.htm" target="_blank">第七章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz8.htm" target="_blank">第八章</A>&nbsp;&nbsp; &nbsp;
  <A href="dxly/cz9.htm" target="_blank">第九章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz10.htm" target="_blank">第十章</A>&nbsp; </p>
-<p>&nbsp;&nbsp;&nbsp;<A href="dxly/cz11.htm" target="_blank">第十一章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz12.htm" target="_blank">第十二章</A>&nbsp; &nbsp;&nbsp;
+<p>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz11.htm" target="_blank">第十一章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz12.htm" target="_blank">第十二章</A>&nbsp; &nbsp;&nbsp;
  <A href="dxly/cz13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cz17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;
-</p> &nbsp;&nbsp;&nbsp; <A href="dxly/cz21.htm" target="_blank">第二十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;
+</p> &nbsp; &nbsp;&nbsp; <A href="dxly/cz21.htm" target="_blank">第二十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;
+ <A href="dxly/cz24.htm" target="_blank">第二十四章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz26.htm" target="_blank">第二十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz27.htm" target="_blank">第二十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz28.htm" target="_blank">第二十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;
+
+
+
 
 </p>
 
@@ -28,23 +33,26 @@
 </p>
 <p>　</p>
 <p>二、葛神之江湖岁月（1989年6月–1990年7月）</p>
-<p>&nbsp;&nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy3.htm" target="_blank">第三章</A>&nbsp;
+<p>&nbsp;&nbsp; &nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy3.htm" target="_blank">第三章</A>&nbsp;
 　<A href="dxly/jhsy4.htm" target="_blank">第四章</A>&nbsp;&nbsp;<A href="dxly/jhsy5.htm" target="_blank">第五章</A>&nbsp; 
 &nbsp;<A href="dxly/jhsy6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/jhsy9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;
 
 
 </p>
 <p>　</p>
 <p>三、葛神之飞越疯人院（1990年12月–今）</p>
-&nbsp;&nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
 <A href="dxly/fyfry4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp; </p>
-<p>&nbsp;&nbsp;&nbsp; <A href="dxly/fyfry11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
+<p>&nbsp; &nbsp;&nbsp; <A href="dxly/fyfry11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/fyfry17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/fyfry19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -54,9 +62,17 @@
 <p>　</p>
 <p>四、葛神和他的女人们（1990年8月–今）</p>
 
-&nbsp;&nbsp;&nbsp; <A href="dxly/nrm1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp; <A href="dxly/nrm1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/nrm4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/nrm9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp; </p>
+<p>&nbsp; &nbsp;&nbsp;<A href="dxly/nrm11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/nrm16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -65,9 +81,17 @@
 <p>　</p>
 <p>五、葛神之网络生涯（2001年3月–今）</p>
 
-&nbsp;&nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
 <A href="dxly/wl4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp; <A href="dxly/wl11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
+
+
+
+
 
 
 
@@ -76,8 +100,22 @@
 <p>　</p>
 <p>六、葛神之成神之路（2001年4月–今）</p>
 
-&nbsp;&nbsp;&nbsp; <A href="dxly/cs1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cs6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp; <A href="dxly/cs1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs9.htm" target="_blank">第九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs10.htm" target="_blank">第十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp;&nbsp;<A href="dxly/cs11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;
+
+
+
+
+
+
+
+
+
 
 
 
