--- a/pl3.html
+++ b/pl3.html
@@ -50,7 +50,8 @@
 	<p><a href="../dxrj/202103.htm" target="_blank">2021年3月</a>&nbsp;&nbsp;<a href="../dxrj/202104.htm" target="_blank">2021年4月</a>&nbsp;&nbsp;<a href="../dxrj/202105.htm" target="_blank">2021年5月</a>&nbsp;&nbsp;<a href="../dxrj/202106.htm" target="_blank">2021年6月</a>&nbsp;&nbsp;
 <a href="../dxrj/202107.htm" target="_blank">2021年7月</a>&nbsp;&nbsp;<a href="../dxrj/202108.htm" target="_blank">2021年8月</a>&nbsp;&nbsp;
 <a href="../dxrj/202109.htm" target="_blank">2021年9月</a>&nbsp;&nbsp;
-<p><a href="../dxrj/202110.htm" target="_blank">2021年10月</a>&nbsp;&nbsp;<a href="../dxrj/202111.htm" target="_blank">2021年11月</a>&nbsp;&nbsp;
+<p><a href="../dxrj/202110.htm" target="_blank">2021年10月</a>&nbsp;&nbsp;<a href="../dxrj/202111.htm" target="_blank">2021年11月</a>&nbsp;&nbsp;<a href="../dxrj/202112.htm" target="_blank">2021年12月</a>&nbsp;&nbsp;
+
 
 
 
