--- a/dxly/gwmfx.htm
+++ b/dxly/gwmfx.htm
@@ -53,12 +53,12 @@
 我们信获得永生的我们，在神的国度里，探寻神自始至终的作为，永无穷尽，我们永远以神为乐。<br>
 随着神经的传播，我们认为2019年即可全球实现共产社会，各尽所能，按需分配（社会能提供的合理需求）。<br>
 葛亦民是社会长期培养试炼他的，人类创造了一个自己的救世主。<br>
-　</p>
+&nbsp;</p>
 <p>神教网站为民众提供灵魂体全方位的资源。侍奉广大信徒和非信徒。希望通过这个综合性的网络平台，侍奉广大民众，推动真理、文化的彰显，促进启蒙的广传。<br>
 神教事工团队经济方面尚没有稳定的盈利途径支持事工，盈利模式仍然在探索中。2021年， 
 神教策划着更大的发展和改变，某些也有赖于经济上更多的投入。感谢上帝，盼望有关心神圣事工、乐意奉献的弟兄姐妹凭着感动和力量奉献。出于爱心和信心的奉献是上帝喜悦的，愿上帝加倍地赐福！奉献者均记在生命册上。<br>
 <font size="4"><br>
-　</font></p>
+&nbsp;</font></p>
 <p><b><font size="4">属灵永生的唯一方法<br>
 <br>
 1、信葛神。<br>
@@ -83,13 +83,23 @@ QQ：50914333</font><br><br>
 <span lang="en-us">&nbsp;</span>支付宝：13952819473</p>
 <p>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-汇款账号：邮政卡号 6221 8831 4000 1998 345 葛亦民 开户行：江苏镇江市梦溪路支行<br><br>
+汇款账号：工行卡号 6212 2611 0400 1895 704 葛亦民 开户行：江苏镇江南大街支行</span></p>
+<p>
+<span style="font-size: medium; letter-spacing: normal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span>
+<span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
+邮政卡号 6221 8831 4000 1998 345 葛亦民 开户行：江苏镇江市梦溪路支行</span></p>
+<p>
+<span style="font-size: medium; letter-spacing: normal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+农商行卡号：6230661031000768624 葛亦民 开户行：镇江农商行三山支行 </span>
+<span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
+<br><br>
 
 
 </p>
 
 <br>
-　</p>
+&nbsp;</p>
 <p>　</p>
 <p><IMG SRC="../pic/zfbgeyimin.jpg" alt="beautiful lady" align="left" border=0> 
 <IMG SRC="../pic/wxgeyimin.jpg" alt="beautiful lady" align="right" border=0>　</p><script>
