--- a/god.html
+++ b/god.html
@@ -2,14 +2,16 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>葛神异闻录</title>
+<title>葛神异闻录</title><meta name="viewport" content="width=device-width, initial-scale=1" />  
+
+
 </head>
 
 <body>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font size="6" color="#800080">葛神异闻录</font></p>
-	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"WIDTH=130 HEIGHT=200></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
+	<p><a href="god.html" target="_blank"><img src="dxrj/sjgsywlx.jpg"></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="index.html" target="_blank"><font size="6">神网</font></A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
 <p><br>
 一、葛神之纯真年代（1969年1月–1990年7月）</p>
 <p>&nbsp; &nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
@@ -21,15 +23,31 @@
 <A href="dxly/cz17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;
 </p> &nbsp; &nbsp;&nbsp; <A href="dxly/cz21.htm" target="_blank">第二十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;
  <A href="dxly/cz24.htm" target="_blank">第二十四章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz26.htm" target="_blank">第二十六章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cz27.htm" target="_blank">第二十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz28.htm" target="_blank">第二十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz27.htm" target="_blank">第二十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz28.htm" target="_blank">第二十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz30.htm" target="_blank">第三十章</A>&nbsp;&nbsp;&nbsp;
+<p></p> &nbsp; &nbsp;&nbsp; <A href="dxly/cz31.htm" target="_blank">第三十一章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz32.htm" target="_blank">第三十二章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz33.htm" target="_blank">第三十三章</A>&nbsp;&nbsp;&nbsp;
+ <A href="dxly/cz34.htm" target="_blank">第三十四章</A>&nbsp;&nbsp;&nbsp; <A href="dxly/cz35.htm" target="_blank">第三十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz36.htm" target="_blank">第三十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz37.htm" target="_blank">第三十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz38.htm" target="_blank">第三十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz39.htm" target="_blank">第三十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz40.htm" target="_blank">第四十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp; <A href="dxly/cz41.htm" target="_blank">第四十一章</A>&nbsp;&nbsp;&nbsp;
+ <A href="dxly/cz42.htm" target="_blank">第四十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz43.htm" target="_blank">第四十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz44.htm" target="_blank">第四十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz45.htm" target="_blank">第四十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz46.htm" target="_blank">第四十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz47.htm" target="_blank">第四十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz48.htm" target="_blank">第四十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz49.htm" target="_blank">第四十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz50.htm" target="_blank">第五十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz51.htm" target="_blank">第五十一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz52.htm" target="_blank">第五十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz53.htm" target="_blank">第五十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz54.htm" target="_blank">第五十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz55.htm" target="_blank">第五十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz56.htm" target="_blank">第五十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz57.htm" target="_blank">第五十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz58.htm" target="_blank">第五十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz59.htm" target="_blank">第五十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz60.htm" target="_blank">第六十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz61.htm" target="_blank">第六十一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz62.htm" target="_blank">第六十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz63.htm" target="_blank">第六十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz64.htm" target="_blank">第六十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz65.htm" target="_blank">第六十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz66.htm" target="_blank">第六十六章</A>&nbsp;&nbsp;&nbsp;
+
+
 
 
 
 
 </p>
-
-
-
 </p>
 <p>　</p>
 <p>二、葛神之江湖岁月（1989年6月–1990年7月）</p>
@@ -54,11 +72,6 @@
 <A href="dxly/fyfry19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;
 
 
-
-
-
-
-
 <p>　</p>
 <p>四、葛神和他的女人们（1990年8月–今）</p>
 
@@ -68,13 +81,6 @@
 <p>&nbsp; &nbsp;&nbsp;<A href="dxly/nrm11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/nrm14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/nrm16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
-
-
-
-
-
-
-
 
 
 
@@ -88,10 +94,10 @@
 <p>&nbsp; &nbsp; <A href="dxly/wl11.htm" target="_blank">第十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl12.htm" target="_blank">第十二章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/wl13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/wl15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
-
-
-
-
+<A href="dxly/wl18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp; <A href="dxly/wl21.htm" target="_blank">第二十一章</A>&nbsp; &nbsp;&nbsp;<A href="dxly/wl22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl24.htm" target="_blank">第二十四章</A>&nbsp;&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp;
 
 
 
@@ -107,6 +113,21 @@
 <A href="dxly/cs13.htm" target="_blank">第十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs14.htm" target="_blank">第十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp;&nbsp;<A href="dxly/cs21.htm" target="_blank">第二十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs24.htm" target="_blank">第二十四章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs26.htm" target="_blank">第二十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs27.htm" target="_blank">第二十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs28.htm" target="_blank">第二十八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs30.htm" target="_blank">第三十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp;&nbsp;<A href="dxly/cs31.htm" target="_blank">第三十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs32.htm" target="_blank">第三十二章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs33.htm" target="_blank">第三十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs34.htm" target="_blank">第三十四章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs35.htm" target="_blank">第三十五章</A>&nbsp;&nbsp;&nbsp;
+
+
+
+
+
+
 
 
 
