--- a/lj.html
+++ b/lj.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>神教网址导航</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />  
+
 
 </head>
 
@@ -25,7 +27,7 @@
 	<br>
 	<font color="#800000">旗舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  
 	</font> </b>
-	<font color="#800000">  <b>  <a target="_blank" href="../nszz/gymsp.htm">葛亦民视频、赞美歌</a></b>&nbsp;  
+	<font color="#800000">  <b>  <a target="_blank" href="http://www.gegod.com/nszz/gymsp.htm">葛亦民视频、赞美歌</a></b>&nbsp;  
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
@@ -45,10 +47,10 @@
 	
 	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;
 
- <a target="_blank" href="http://cn.20331126.xyz/">投票</a>&nbsp; &nbsp;
+ <a target="_blank" href="http://club.gegod.top">投票</a>&nbsp; &nbsp;
 </font>
 
-	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="god.html" target="_blank">葛神异闻录</A>
+	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 <p> 
 <br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
@@ -62,7 +64,7 @@
     <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
-<a target="_blank" href="http://group.20331126.xyz/bbs">大同世界社区</a> &nbsp; &nbsp;
+<a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
 <a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a>
 
@@ -78,7 +80,7 @@
 	
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
   <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.xyz ">神网</a>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.xyz ">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
 <br><br><br>
 
 		
@@ -97,7 +99,7 @@
 	
 
 	<b>
-<p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+<p></p><p><p></p><p></p><p></p><p></p><p></p>
 			
 	
 
