--- a/xw.html
+++ b/xw.html
@@ -1,6 +1,8 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head><META NAME="description" CONTENT="神,神教,基督教,共产主义,上帝,先知,启示,紫薇圣人,紫微圣人"><META NAME="keywords" CONTENT="神,神教,基督教,共产主义,上帝,先知,启示,紫薇圣人,紫微圣人">
+<meta name="viewport" content="width=device-width, initial-scale=1" />  
+
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -119,14 +121,14 @@
 葛亦民有两条耶梅经（葛亦民经）新闻在互联网新闻门户网站发表。&nbsp;
 
 				</a></p>
-				<a href="http://www.gerenjianli.com/Mingren/01/7trk5blls3m1a93.html" target="_blank"><img src="pic/mrjl.jpg"></a>
+				<img src="pic/mrjl.jpg"></a>
 			
 				
 		<p><p>
 		<p>6、<p><img src="gzly/byz.jpg"><p>
 <p>7、<p><img src="pic/7.jpg"><br>
 <img src="pic/8.jpg"><p>
-<p>8、<p><img src="pic/wb.jpg"></a><a href="http://t.qq.com/geyimincom" target="_blank"><img src="pic/qqwb.jpg"></a> <p>
+<p>8、<p><img src="pic/wb.jpg"></a><img src="pic/qqwb.jpg"></a> <p>
 <p>9、百度贴吧大V认证：<br>
 互联网思想家活动家，香港四季出版社签约作家。男，1969年生，中国江苏镇江人 ，毕业于南京大学中文系。出版了现代先知书神经，有人说是圣经修正案 
 。他的思想两大来源：基督教和共产主义。神经是他个人的信息，是对现实和未来的思考，部分是神启。<p><img src="pic/dv.jpg"></a>　<p>　<p>神教微信公众号:godjiao
