--- a/xw2.html
+++ b/xw2.html
@@ -1,6 +1,8 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head><META NAME="description" CONTENT="神,神教,基督教,共产主义,上帝,先知,启示,紫薇圣人,紫微圣人"><META NAME="keywords" CONTENT="神,神教,基督教,共产主义,上帝,先知,启示,紫薇圣人,紫微圣人">
+<meta name="viewport" content="width=device-width, initial-scale=1" />  
+
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -117,17 +119,32 @@
 		
 <p>
 		
-		4、社会化大生产和互联网大革命-中国网<br>
+		5、社会化大生产和互联网大革命-中国网<br>
 
 
  <img border=0 src="pic/2dchina.jpg" >  <img border=0 src="pic/2dchina2.jpg" > 	</span><p>
 		
 <p>
 		
-		4、社会化大生产和互联网大革命-腾迅网<br>
+		6、社会化大生产和互联网大革命-腾迅网<br>
 
 
  <img border=0 src="pic/2dqq.jpg" > 	</span><p>
+ 
+ <p>
+		
+		7、百度学术收录葛亦民论文:当代基督教共产主义——葛亦民的《神经》<br>
+
+
+ <img border=0 src="pic/xueshu.jpg" > 	</span><p>
+ 
+  <p>
+		
+		8、掌桥科研收录葛亦民论文:当代基督教共产主义——葛亦民的《神经》<br>
+
+
+ <img border=0 src="pic/zhangqiao.jpg" > 	</span><p>
+
 
 		
 		<br><br><br><div><br><br><p>　</p><p>　</p>
