--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 
 <META NAME="description" CONTENT="基督教共产主义,紫薇圣人,网哲"><META NAME="keywords" CONTENT="葛亦民,神教,神经,大同世界"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>神网</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />  
+
 
 
 <STYLE type=text/css>TD {
@@ -214,7 +216,7 @@ a:visited.ch {
 50914333@qq.com   电话、微信、支付宝：13952819473 &nbsp;
 
 
- &nbsp;&nbsp;<span class="style3"><a href="dxly/gwmfx.htm" target="_blank">功德箱</a></span>
+ &nbsp;&nbsp;
 
 &nbsp;<A href="scsl/wx.html" target=_blank> 加入葛亦民</A>
 
@@ -313,9 +315,9 @@ var _hmt = _hmt || [];
 </font></a>，<a href="scsl/shji2018(1479603394).mht" target="_blank">书刊注册组注册。</font></a><br>
 </span><br>
 <span class="style2"><font size="2">1、中国知网收录《青年文学家》期刊2015年4月11期葛亦民论文<a href="http://www.cnki.com.cn/Article/CJFDTotal-QNWJ201511133.htm" target="_blank">《当代基督教共产主义—葛亦民的&lt;神经&gt;》</a> <br>
+2、</font><a href="https://d.wanfangdata.com.cn/periodical/qnwxj201511132" target="_blank"><font size="2">万方数据收录</font></a></span><br>
 
-
-2、</font><a href="https://www.zhangqiaokeyan.com/academic-journal-cn_youth-literator_thesis/0201241838102.html" target="_blank"><font size="2">掌桥科研收录</font></a></span><br><br>
+3、</font><a href="https://www.zhangqiaokeyan.com/academic-journal-cn_youth-literator_thesis/0201241838102.html" target="_blank"><font size="2">掌桥科研收录</font></a></span><br><br>
 
 <font size="2">神经（耶梅经)新闻： <br>
 1、</font><a href="../gzly/qqxw.jpg" target="_blank"><font size="2">社会化大生产和互联网大革命-天天快报-腾讯网</font></a><br>
