--- a/dxly/gwmfx.htm
+++ b/dxly/gwmfx.htm
@@ -23,7 +23,7 @@
 <br>
 一、出书。<br>
 神经是现代先知书，中国人葛亦民著作，是基督教共产主义经典，以基督教为主，提出新的思考，也对共产主义提出新的思考。还有大量对现行社会、人生的思考， 
-及提出解决这一切问题的办法，神经核心关键词是和平、平等和爱。神经有二十六章，目前50万字，神经有外文版。 
+及提出解决这一切问题的办法，神经核心关键词是和平、平等和爱。神经有二十七章，目前90万字，神经有外文版。 
 神经第一版已于2014年9月在香港四季出版社出版，书号：ISBN978-988-13762-1-3。</p>
 <p><br>
 二、期刊。<br>
@@ -51,11 +51,11 @@
 我们信此生目的是取得属灵身体，代替属尘土身体，获得永生，与神永远同在。<br>
 我们信一切在神的计划中，那伟大的全能者。一切苦难皆为神试炼人属灵的必需品，等到末了一步完成，神会安置我们在适当的位置上。<br>
 我们信获得永生的我们，在神的国度里，探寻神自始至终的作为，永无穷尽，我们永远以神为乐。<br>
-随着神经的传播，我们认为2019年即可全球实现共产社会，各尽所能，按需分配（社会能提供的合理需求）。<br>
+随着神经的传播，我们认为2033年即可全球实现共产社会，各尽所能，按需分配（社会能提供的合理需求）。<br>
 葛亦民是社会长期培养试炼他的，人类创造了一个自己的救世主。<br>
 &nbsp;</p>
 <p>神教网站为民众提供灵魂体全方位的资源。侍奉广大信徒和非信徒。希望通过这个综合性的网络平台，侍奉广大民众，推动真理、文化的彰显，促进启蒙的广传。<br>
-神教事工团队经济方面尚没有稳定的盈利途径支持事工，盈利模式仍然在探索中。2021年， 
+神教事工团队经济方面尚没有稳定的盈利途径支持事工，盈利模式仍然在探索中。2022年， 
 神教策划着更大的发展和改变，某些也有赖于经济上更多的投入。感谢上帝，盼望有关心神圣事工、乐意奉献的弟兄姐妹凭着感动和力量奉献。出于爱心和信心的奉献是上帝喜悦的，愿上帝加倍地赐福！奉献者均记在生命册上。<br>
 <font size="4"><br>
 &nbsp;</font></p>
@@ -85,15 +85,7 @@ QQ：50914333</font><br><br>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 汇款账号：工行卡号 6212 2611 0400 1895 704 葛亦民 开户行：江苏镇江南大街支行</span></p>
 <p>
-<span style="font-size: medium; letter-spacing: normal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span>
-<span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-邮政卡号 6221 8831 4000 1998 345 葛亦民 开户行：江苏镇江市梦溪路支行</span></p>
-<p>
-<span style="font-size: medium; letter-spacing: normal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-农商行卡号：6230661031000768624 葛亦民 开户行：镇江农商行三山支行 </span>
-<span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-<br><br>
+<br>
 
 
 </p>
