--- a/gzly/zp4.htm
+++ b/gzly/zp4.htm
@@ -34,7 +34,7 @@
 	<img border="0" src="../rj/2020zj2.jpg">
 	<span lang="en-us">2020</span><p><img border="0" src="../scsl/2021.jpg"><img border="0" src="../scsl/gz.jpg">　</p>
 <p><img border="0" src="../scsl/tzw.jpg"><img border="0" src="../scsl/gegod.jpg">　</p>
-<p><img border="0" src="../scsl/gejidu.jpg">　</p>
+<p><img border="0" src="../scsl/gejidu.jpg"><img border="0" src="../scsl/mglt.jpg">　英国玛格丽特（网恋）　</p>
 
 <img border="0" src="../rj/gym20170707.gif">
 <p>　</p><p>　</p>
