--- a/rj/eswj.htm
+++ b/rj/eswj.htm
@@ -204,8 +204,12 @@ img.userlink-avatar-small{margin-left:0.2em;margin-right:0.2em;width:1.5em;borde
 <li><b>福音大全</b>：<a rel="nofollow" class="external text" href="http://www.gegod.com/lj.html"target="_blank">神教网址导航</a></li>
 <li><b>神坛地址</b>
 <ul><li>江苏省镇江市</li>
-<li><b>功德箱</b>
-<ul><li>邮政卡号 6221 8831 4000 1998 345 葛亦民 开户行：江苏镇江市梦溪路支行</li></ul></li>
+<li><b>功德箱</b><br><p>
+<ul><li>
+<p>
+<span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
+工行卡号 6212 2611 0400 1895 704 葛亦民 开户行：江苏镇江南大街支行</span></p>
+	</li></ul></li>
 <li>微信支付：13952819473</li>
 <li>支付宝：13952819473</li></ul></li></ul>
 <h2><span id="行传"></span><span class="mw-headline" id=".E8.A1.8C.E4.BC.A0">行传</span></h2>
