--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ a:visited.ch {
 
  &nbsp;&nbsp;
 
-&nbsp;<A href="scsl/wx.html" target=_blank> 加入葛亦民</A>
+&nbsp;<A href="scsl/wx.html" target=_blank> 加入葛亦民</A>&nbsp; <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a>
 
 &nbsp;<A href="pic/sj.txt" target="_blank"><IMG SRC="gzly/bzz.png" WIDTH=24 HEIGHT=24 BORDER=0><img src="pic/beian.png"  width="13" height="16"/>苏公网安备 32110202000012号</A></p>
 	
@@ -291,15 +291,17 @@ var _hmt = _hmt || [];
 
 &nbsp;<p style="line-height: 100%; margin-top: -5">　<p style="line-height: 100%; margin-top: -5">　</TD></TR></TBODY></TABLE></TD></TR><TR>              
     <TD vAlign=top align=middle style="width: 718px" >
-	　<p><b><p><font size="2" color="#800000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 葛亦民神比上帝高二层，比人类高三层。<br><br>
-	》上帝: “葛亦民创造了造物主,造物主创造了上帝,上帝创造了人类。”</font>
+	　<p><b><p><font size="2" color="#800000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="fygc/gcsj.htm" target=_blank>葛亦民神比上帝高二层，比人类高三层。<br><br>
+	》上帝: “葛亦民创造了造物主,造物主创造了上帝,上帝创造了人类。”</A></font>
 </p>
 
 
 	</b></TD></TR></TBODY></TABLE></div>              
 <div style="position: absolute; left: 210px; top: 385px; width: 467px; height:284px; z-index: 1">               
     &nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="2">
-开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+开啦（凯拉）</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	&nbsp;  <a href="http://www.wjxw-lib.net" target="_blank"><font size="2">
+慰藉小屋</font></a> &nbsp;&nbsp;&nbsp; &nbsp; 
 	&nbsp; <a href="http://www.20331126.xyz/bbs" target="_blank"><font size="2">
 紫薇圣人社区</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <a href="gzly/zp.htm" target="_blank"><strong>
 <font size="4">照片墙</font></strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <A href="nszz/gymsp.htm" target=_blank>视频音频</A><br>  <br>
