--- a/god.html
+++ b/god.html
@@ -13,7 +13,8 @@
 <font size="6" color="#800080">葛神异闻录</font></p>
 	<p><a href="god.html" target="_blank"><img src="dxrj/sjgsywlx.jpg"></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="index.html" target="_blank"><font size="6">神网</font></A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
 <p><br>
-一、葛神之纯真年代（1969年1月–1990年7月）</p>
+一、
+第1卷&nbsp;&nbsp;&nbsp; 葛神异闻录之纯真年代（1969年1月–1990年7月）</p>
 <p>&nbsp; &nbsp; &nbsp; <A href="dxly/cz1.htm" target="_blank">第一章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz3.htm" target="_blank">第三章</A>&nbsp;&nbsp; &nbsp; <A href="dxly/cz4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;
 
  <A href="dxly/cz5.htm" target="_blank">第五章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cz7.htm" target="_blank">第七章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/cz8.htm" target="_blank">第八章</A>&nbsp;&nbsp; &nbsp;
@@ -40,7 +41,27 @@
 <A href="dxly/cz60.htm" target="_blank">第六十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz61.htm" target="_blank">第六十一章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cz62.htm" target="_blank">第六十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz63.htm" target="_blank">第六十三章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cz64.htm" target="_blank">第六十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz65.htm" target="_blank">第六十五章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cz66.htm" target="_blank">第六十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz66.htm" target="_blank">第六十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz67.htm" target="_blank">第六十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz68.htm" target="_blank">第六十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz69.htm" target="_blank">第六十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz70.htm" target="_blank">第七十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz71.htm" target="_blank">第七十一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz72.htm" target="_blank">第七十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz73.htm" target="_blank">第七十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz74.htm" target="_blank">第七十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz75.htm" target="_blank">第七十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz76.htm" target="_blank">第七十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz77.htm" target="_blank">第七十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz78.htm" target="_blank">第七十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz79.htm" target="_blank">第七十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz80.htm" target="_blank">第八十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz81.htm" target="_blank">第八十一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz82.htm" target="_blank">第八十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz83.htm" target="_blank">第八十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz84.htm" target="_blank">第八十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz85.htm" target="_blank">第八十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz86.htm" target="_blank">第八十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz87.htm" target="_blank">第八十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz88.htm" target="_blank">第八十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz89.htm" target="_blank">第八十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz90.htm" target="_blank">第九十章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz91.htm" target="_blank">第九十一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz92.htm" target="_blank">第九十二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz93.htm" target="_blank">第九十三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz94.htm" target="_blank">第九十四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz95.htm" target="_blank">第九十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz96.htm" target="_blank">第九十六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz97.htm" target="_blank">第九十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz98.htm" target="_blank">第九十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz99.htm" target="_blank">第九十九章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz100.htm" target="_blank">第一百章</A>&nbsp;&nbsp;&nbsp;<p></p> &nbsp; &nbsp;&nbsp;<A href="dxly/cz101.htm" target="_blank">第一百零一章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz102.htm" target="_blank">第一百零二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cz103.htm" target="_blank">第一百零三章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cz104.htm" target="_blank">第一百零四章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -50,7 +71,7 @@
 </p>
 </p>
 <p>　</p>
-<p>二、葛神之江湖岁月（1989年6月–1990年7月）</p>
+<p>二、第2卷&nbsp; 葛神异闻录之江湖岁月（1989年6月–1990年7月）</p>
 <p>&nbsp;&nbsp; &nbsp;&nbsp; <A href="dxly/jhsy1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;　<A href="dxly/jhsy3.htm" target="_blank">第三章</A>&nbsp;
 　<A href="dxly/jhsy4.htm" target="_blank">第四章</A>&nbsp;&nbsp;<A href="dxly/jhsy5.htm" target="_blank">第五章</A>&nbsp; 
 &nbsp;<A href="dxly/jhsy6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/jhsy8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
@@ -59,7 +80,7 @@
 
 </p>
 <p>　</p>
-<p>三、葛神之飞越疯人院（1990年12月–今）</p>
+<p>三、第3卷&nbsp; 葛神异闻录之飞越疯人院（1990年12月–今）</p>
 &nbsp; &nbsp;&nbsp; <A href="dxly/fyfry1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
 <A href="dxly/fyfry4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;
@@ -73,7 +94,7 @@
 
 
 <p>　</p>
-<p>四、葛神和他的女人们（1990年8月–今）</p>
+<p>四、第4卷&nbsp; 葛神异闻录之葛神和他的女人们（1990年8月–今）</p>
 
 &nbsp;&nbsp; &nbsp; <A href="dxly/nrm1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/nrm4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/nrm8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
@@ -85,7 +106,7 @@
 
 
 <p>　</p>
-<p>五、葛神之网络生涯（2001年3月–今）</p>
+<p>五、第5卷&nbsp; 葛神异闻录之网络生涯（2001年3月–今）</p>
 
 &nbsp; &nbsp;&nbsp; <A href="dxly/wl1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;
 
@@ -97,14 +118,23 @@
 <A href="dxly/wl18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;</p>
 <p>&nbsp; &nbsp; <A href="dxly/wl21.htm" target="_blank">第二十一章</A>&nbsp; &nbsp;&nbsp;<A href="dxly/wl22.htm" target="_blank">第二十二章</A>&nbsp;&nbsp;&nbsp;&nbsp;
 <A href="dxly/wl23.htm" target="_blank">第二十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl24.htm" target="_blank">第二十四章</A>&nbsp;&nbsp;&nbsp;&nbsp;
-<A href="dxly/wl25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl25.htm" target="_blank">第二十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl26.htm" target="_blank">第二十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl27.htm" target="_blank">第二十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl28.htm" target="_blank">第二十八章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/wl29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/wl30.htm" target="_blank">第三十章</A>&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp; &nbsp; <A href="dxly/wl31.htm" target="_blank">第三十一章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/wl32.htm" target="_blank">第三十二章</A>&nbsp; &nbsp;&nbsp;
+ <A href="dxly/wl33.htm" target="_blank">第三十三章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/wl34.htm" target="_blank">第三十四章</A>&nbsp; &nbsp;&nbsp;
+<A href="dxly/wl35.htm" target="_blank">第三十五章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/wl36.htm" target="_blank">第三十六章</A>&nbsp; &nbsp;&nbsp;
+ <A href="dxly/wl37.htm" target="_blank">第三十七章</A>&nbsp; &nbsp;&nbsp; <A href="dxly/wl38.htm" target="_blank">第三十八章</A>&nbsp; &nbsp;&nbsp;
+
+
+
 
 
 
 
 
 <p>　</p>
-<p>六、葛神之成神之路（2001年4月–今）</p>
+<p>六、第6卷&nbsp; 葛神异闻录之成神之路（2001年4月–今）</p>
 
 &nbsp;&nbsp; &nbsp; <A href="dxly/cs1.htm" target="_blank">第一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs2.htm" target="_blank">第二章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs3.htm" target="_blank">第三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs4.htm" target="_blank">第四章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs5.htm" target="_blank">第五章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs6.htm" target="_blank">第六章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs7.htm" target="_blank">第七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs8.htm" target="_blank">第八章</A>&nbsp;&nbsp;&nbsp;
