--- a/lj.html
+++ b/lj.html
@@ -15,9 +15,10 @@
 	<b>&nbsp;</b></font><b><font size="5">神教所有网站</font></b><p><br><br>
 	
 
-<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<a target="_blank"href="http://www.gegod.com">神网</a>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp; &nbsp; 
-&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.wjxw-lib.net" target="_blank"><font size="4">慰藉小屋</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">紫薇圣人社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	</b> </font>
@@ -31,10 +32,13 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank"href="http://bbs.gegod.xyz">紫微圣人论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
-	<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
-	&nbsp;&nbsp;&nbsp;<a target="_blank" href="//www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;  <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
+	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
+<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
+	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
+	&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.yooco.org/">yooco论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
+
 	
 
 	</font>
@@ -61,26 +65,27 @@
 	&nbsp;<font size="4"><a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;
 
 
-    <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
+    <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp;&nbsp;
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>
-	&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a>
+<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://group.gegod.com">德国论坛</a>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://hao.gegod.com">神网</a>
+	
 
 		
 	<br><br><br>
 
 	
 
-	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp; &nbsp;
+	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 
 
 	
 	
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
   <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.xyz ">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
 <br><br><br>
 
 		
