--- a/lj.html
+++ b/lj.html
@@ -32,11 +32,11 @@
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;  <a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;  <a target="_blank" href="http://gym.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
 	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
-	&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.yooco.org/">yooco论坛</a>&nbsp; &nbsp;
+	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
 
 	
@@ -51,7 +51,7 @@
 	
 	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;
 
- <a target="_blank" href="http://club.gegod.top">投票</a>&nbsp; &nbsp;
+ <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
 </font>
 
 	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
