--- a/pl3.html
+++ b/pl3.html
@@ -53,7 +53,8 @@
 <a href="../dxrj/202107.htm" target="_blank">2021年7月</a>&nbsp;&nbsp;<a href="../dxrj/202108.htm" target="_blank">2021年8月</a>&nbsp;&nbsp;
 <a href="../dxrj/202109.htm" target="_blank">2021年9月</a>&nbsp;&nbsp;
 <p><a href="../dxrj/202110.htm" target="_blank">2021年10月</a>&nbsp;&nbsp;<a href="../dxrj/202111.htm" target="_blank">2021年11月</a>&nbsp;&nbsp;<a href="../dxrj/202112.htm" target="_blank">2021年12月</a>&nbsp;&nbsp;
-<a href="../dxrj/202201.htm" target="_blank">2022年1月</a>&nbsp;&nbsp;<a href="../dxrj/20220203.htm" target="_blank">2022年2-3月</a>&nbsp;&nbsp;
+<a href="../dxrj/202201.htm" target="_blank">2022年1月</a>&nbsp;&nbsp;<a href="../dxrj/20220203.htm" target="_blank">2022年2-3月</a>&nbsp;&nbsp;<a href="../dxrj/202204.htm" target="_blank">2022年4月</a>&nbsp;&nbsp;
+
 
 
 
