--- a/lj.html
+++ b/lj.html
@@ -47,7 +47,7 @@
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
 	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
-		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;&nbsp; <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
 	
 	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;
 
@@ -55,7 +55,7 @@
 </font>
 
 	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 <p> 
 <br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：godjiao（<font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
@@ -69,8 +69,8 @@
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://group.gegod.com">德国论坛</a>&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://hao.gegod.com">神网</a>
+<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://bbs.wjxw-lib.net">德国论坛</a>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://club.wjxw-lib.net">神网</a>
 	
 
 		
@@ -84,7 +84,7 @@
 	
 	
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
-  <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
+ <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
  <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
 <br><br><br>
 
