--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@ var _hmt = _hmt || [];
   <script data-ad-client="ca-pub-4478354601389172" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  </div> 
   
   
- <div style="position:absolute; left:750px; top:73px; width:554px; height:787px; z-index:0; BACKGROUND-COLOR:">                    
+ <div style="position:absolute; left:750px; top:73px; width:553px; height:816px; z-index:0; BACKGROUND-COLOR:">                    
          
   <TABLE cellSpacing=0 cellPadding=0 width="100%" border=0 style="height: 787px"><TBODY><TR>                
     <TD vAlign=top height=109 style="width: 718px">
-	<TABLE height=496 cellSpacing=1 borderColorDark=#cccc99 width="97%" align=center borderColorLight=#ffffff border=1><TBODY><TR>                
-            <TD vAlign=top height=492 style="width: 752px"><TABLE cellSpacing=1 cellPadding=1 width="100%" border=0><TBODY></TBODY></TABLE>              
+	<TABLE height=447 cellSpacing=1 borderColorDark=#cccc99 width="97%" align=center borderColorLight=#ffffff border=1><TBODY><TR>                
+            <TD vAlign=top height=443 style="width: 752px"><TABLE cellSpacing=1 cellPadding=1 width="100%" border=0><TBODY></TBODY></TABLE>              
   <p style="line-height: 100%; margin-top: -5"><A href="pic/sj.pdf" target="_blank">
 
 <IMG SRC="pic/fm.jpg"WIDTH=260 HEIGHT=409 alt="beautiful lady" align="left" border=0 width="681" height="450"></a><A href="pic/sj.doc" target="_blank"><IMG SRC="pic/jz.jpg"WIDTH=260 HEIGHT=423 alt="beautiful lady" align="right" border=0></a><br>         
@@ -322,6 +322,8 @@ var _hmt = _hmt || [];
 	年生，中国江苏镇江人，毕业于南京大学中文系。紫薇圣人，神，共产主义领<br><br>
 	袖。出版了现代先知书神经，被评为圣经修正案。他的思想两大来源：基督教<br><br>
 	和共产主义。神经是他个人的信息，是对现实和未来的思考，部分是神启。</font></A></p>
+	<p>&nbsp;</p>
+	<p>&nbsp;<A href="fygc/amazon.htm" target=_blank><b><font size="4">神经、葛神异闻录英文版平装书在亚马逊上线</font></A></p>
 
 
 	</TD></TR></TBODY></TABLE></div>              
