--- a/fygc/4tq.htm
+++ b/fygc/4tq.htm
@@ -11,19 +11,30 @@
 <p><br>
 1、神论：唯一的最高存在。<br>
 神经十二75我的神名称就叫神，就是说：“我是神，你们要听他（指葛亦民）。”的那一位。<br>
-神经一6、2001年秋，葛亦民在镇江家中躺大床上午睡，异梦中，神说：“我是神，你们要听他（指葛亦民）。”立即醒来，对“指葛亦民”感到神奇，当时妻儿在家。（葛亦民受膏作神）。<br>
-2、神子降临：1969年葛亦民（上帝之子救世主)<br>
-3、创立时间：2001年<br>
-4、创始人：葛亦民<br>
-5、经典：《神经》<br>
-6、经典作者：葛亦民<br>
-7、成书时间：2004年（更新中)<br>
-8、圣地：镇江<br>
+神经一6、2001年秋，葛亦民在镇江家中躺大床上午睡，异梦中，神说：“我是神，你们要听他（指葛亦民）。”立即醒来，对“指葛亦民”感到神奇，当时妻儿在家。（葛亦民受膏作神）。</p>
+<p><br>
+2、神子降临：1969年葛亦民（上帝之子救世主)</p>
+<p><br>
+3、创立时间：2001年</p>
+<p><br>
+4、创始人：葛亦民</p>
+<p><br>
+5、经典：《神经》</p>
+<p><br>
+6、经典作者：葛亦民</p>
+<p><br>
+7、成书时间：2004年（更新中)</p>
+<p><br>
+8、圣地：镇江</p>
+<p><br>
 9、信仰：神教是当代基督教共产主义。<br>
 神经二十五（九）：7我们信此生目的是取得属灵身体，代替属尘土身体，获得永生，与神永远同在。<br>
-神经十八41两大（社会化大生产和互联网大革命）的今天，实现葛亦民主义，实现共产社会，物质条件已具备，只等精神条件具备，即更新人类的心灵，葛亦民主义福音传遍全球，被人类接受。<br>
-10、神经金律：[不与任何人作对],这是天国的快乐。<br>
-　</p>
+神经十八41两大（社会化大生产和互联网大革命）的今天，实现葛亦民主义，实现共产社会，物质条件已具备，只等精神条件具备，即更新人类的心灵，葛亦民主义福音传遍全球，被人类接受。</p>
+<p><br>
+10、神经金律：[不与任何人作对],这是天国的快乐。</p>
+<p>&nbsp;</p>
+<p><br>
+&nbsp;</p>
 <iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 </body>
 
