--- a/god.html
+++ b/god.html
@@ -151,7 +151,9 @@
 <A href="dxly/cs29.htm" target="_blank">第二十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs30.htm" target="_blank">第三十章</A>&nbsp;&nbsp;&nbsp;</p>
 <p>&nbsp; &nbsp;&nbsp;<A href="dxly/cs31.htm" target="_blank">第三十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs32.htm" target="_blank">第三十二章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs33.htm" target="_blank">第三十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs34.htm" target="_blank">第三十四章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cs35.htm" target="_blank">第三十五章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs35.htm" target="_blank">第三十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs36.htm" target="_blank">第三十六章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs37.htm" target="_blank">第三十七章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 
