--- a/lj.html
+++ b/lj.html
@@ -17,9 +17,10 @@
 
 <font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp; &nbsp; 
-&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.wjxw-lib.net" target="_blank"><font size="4">慰藉小屋</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><a target="_blank" href="http://bbs.gegod.com/bbs">紫薇圣人社区</a> &nbsp; &nbsp;
+	</b><a href="http://www.wjxw-lib.net" target="_blank"><font size="4">慰藉小屋</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">紫薇圣人社区</a>
+	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	</b> </font>
 <p>
@@ -33,7 +34,7 @@
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
 	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a>&nbsp; &nbsp;  <a target="_blank" href="http://gym.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
+	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
@@ -49,7 +50,9 @@
 	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
 		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
 	
-	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;
+	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+
 
  <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
 </font>
@@ -69,8 +72,8 @@
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
 <a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp; &nbsp;
-<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://bbs.wjxw-lib.net">德国论坛</a>&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://club.wjxw-lib.net">神网</a>
+<a target="_blank" href="http://hao.gegod.com/bbs">紫微圣人社区</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://www.gegod.eu.org">神网</a>
 	
 
 		
@@ -108,7 +111,7 @@
 			
 	
 
-</p>    &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<script>
+    &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -118,7 +121,7 @@ var _hmt = _hmt || [];
 })();
 </script>	
 	
-</font><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- h -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -130,13 +133,8 @@ var _hmt = _hmt || [];
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 	
-	</font>
-	
-	<span lang="en-us">
-	
-	<span lang="en-us">
 		
-</span>
+
 		
 </body>
 
